various fixes improving legibility on projects list

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -20,6 +20,9 @@ html {
 	text-transform: uppercase;
 	font-size: .9rem;
 
+	&:focus, &:active {
+		box-shadow: none;
+	}
 
 	&:hover {
 		// background-color: $brand-primary;
